--- a/assets/sass/_var.scss
+++ b/assets/sass/_var.scss
@@ -8,3 +8,11 @@ $dark:#000;
 $light:#fff;
 $gutter:20px;
 
+@mixin headline-p {
+  font-size: 15px;
+  font-family: "Roboto", serif;
+  color: rgb(153, 153, 153);
+  line-height: 1.6;
+  text-align: center;
+}
+
