--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+:root {
+  --main-color: #ff6f69; }
+
 > * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -52,7 +55,8 @@ body {
 
 a, a:hover, a:focus, a:active {
   outline: none !important;
-  text-decoration: none; }
+  text-decoration: none;
+  color: #000; }
 
 .grid-container {
   display: grid;
@@ -60,3 +64,20 @@ a, a:hover, a:focus, a:active {
   margin: 0 auto; }
 
 /*min-height:32vh;*/
+section {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  justify-items: center; }
+
+.element {
+  width: 300px;
+  height: 300px;
+  background-color: #eaea; }
+
+.trigger {
+  width: 100px;
+  height: 30px;
+  background-color: black;
+  margin-bottom: 300px;
+  position: relative; }
