--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,4 +10,22 @@
 
 /*min-height:32vh;*/
 
+section {
+	width: 100%;
+	height: 100vh;
+	display: grid;
+	justify-items: center;
+}
 
+.element {
+	width: 300px;
+	height: 300px;
+	background-color: #eaea;
+}
+.trigger {
+	width: 100px;
+	height: 30px;
+	background-color: black;
+	margin-bottom: 300px;
+	position: relative;
+}
