--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -1,6 +1,6 @@
 // this write component for elements
 
-> * {
+ * {
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
