--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,17 +15,91 @@ section {
 	height: 100vh;
 	display: grid;
 	justify-items: center;
+	align-items: center;
+	background-color: #D7E3E7;
 }
 
-.element {
-	width: 300px;
-	height: 300px;
-	background-color: #eaea;
-}
-.trigger {
-	width: 100px;
-	height: 30px;
-	background-color: black;
-	margin-bottom: 300px;
-	position: relative;
+
+
+.TERADEK_LOWER_THIRD_ANIMATION_10{
+	& .scene-1{
+		& .scene-1__content{
+			& .content__group-1{
+				display: grid;
+				width: 100%;
+				height: 100%;
+				position: relative;
+				padding: 16px 0px 16px 16px;
+				background-size: cover;
+				background: linear-gradient(180deg, #131313 0%, #2D2D2D 100%);
+				border-radius: 32px;
+				& .group__background {
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					background-image: url(../img/crutch-10-2.png);
+					background-position: right;
+					background-repeat: no-repeat;
+				}
+				& .content__top {
+					display: grid;
+					width: 100%;
+					height: 100%;
+					position: relative;
+					overflow: hidden;
+					z-index: 2;
+					& .content__top-inner {
+						display: grid;
+						width: max-content;
+						height: 100%;
+						position: relative;
+						grid-template-columns: 1fr max-content;
+						place-items: center;
+						overflow: hidden;
+						grid-gap: 10px;
+					}
+					& .content__image{
+						display: grid;
+
+					}
+					& .content__group-inner{
+						& .content__title{
+							font-family: Clash Display, serif;
+							font-style: normal;
+							font-weight: bold;
+							font-size: 34.4242px;
+							letter-spacing: 0.005em;
+							text-transform: uppercase;
+							color: #FFFFFF;
+							opacity: 0;
+							padding-right: 60px;
+							& .real-text {
+								position: relative;
+
+							}
+						}
+						& .content__description{
+							font-family: Satoshi, serif;
+							font-style: normal;
+							font-weight: normal;
+							font-size: 18px;
+							line-height: 27px;
+							color: #F9E974;
+							& .real-text {
+								position: relative;
+								& .letter {
+									opacity: 0;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.letter {
+		//display: inline-block;
+	}
+
 }
