--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,18 +1,10 @@
+/*@font-face {
+  font-family: "Lato";
+  src: url('/fonts/Lato/Lato-Regular.ttf?1292360400') format('truetype');
+}*/
 
 @font-face {
-  font-family: 'Satoshi';
-  src: url('../fonts/Satoshi-Regular.woff2') format('woff2'),
-  url('../fonts/Satoshi-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Clash Display';
-  src: url('../fonts/ClashDisplay-Bold.woff2') format('woff2'),
-  url('../fonts/ClashDisplay-Bold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
+  font-family: "montserrat";
+  font-display: fallback;
+  src: local("montserrat"), url(Montserrat-Regular.woff2) format('woff2');
 }
