--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,159 +1,83 @@
 :root {
-  --main-color: #ff6f69;
-}
+  --main-color: #ff6f69; }
 
-* {
+> * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-*:before, *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+  > *:before, > *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
 
 *::-webkit-input-placeholder {
   color: #666;
-  opacity: 1;
-}
+  opacity: 1; }
 
 *:-moz-placeholder {
   color: #666;
-  opacity: 1;
-}
+  opacity: 1; }
 
 *::-moz-placeholder {
   color: #666;
-  opacity: 1;
-}
+  opacity: 1; }
 
 *:-ms-input-placeholder {
   color: #666;
-  opacity: 1;
-}
+  opacity: 1; }
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid {
-  color: #666;
-}
+  color: #666; }
 
 body input:required:valid,
 body textarea:required:valid {
-  color: #666;
-}
+  color: #666; }
 
 html, body {
-  height: 100%;
-}
+  height: 100%; }
 
 body {
   font-size: 16px;
   min-width: 320px;
   position: relative;
   line-height: 1.65;
-  overflow-x: hidden;
-}
+  overflow-x: hidden; }
 
 .img-responsive {
   display: block;
   max-width: 100%;
-  height: auto;
-}
+  height: auto; }
 
 ::selection {
   background-color: #fff;
-  color: #fff;
-}
+  color: #fff; }
 
 a, a:hover, a:focus, a:active {
   outline: none !important;
   text-decoration: none;
-  color: #000;
-}
+  color: #000; }
 
+.grid-container {
+  display: grid;
+  max-width: 1200px;
+  margin: 0 auto; }
+
+/*min-height:32vh;*/
 section {
   width: 100%;
   height: 100vh;
   display: grid;
-  justify-items: center;
-  align-items: center;
-  background-color: #D7E3E7;
-}
+  justify-items: center; }
 
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content {
-  display: grid;
-  place-items: end;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 {
-  position: relative;
-  display: grid;
-  justify-content: end;
-  align-content: end;
-  overflow: hidden;
-  height: 100%;
-  width: 0%;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-1 .content__title {
-  width: max-content;
-  font-family: "Space Grotesk", serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 81px;
-  letter-spacing: 0.005em;
-  text-transform: uppercase;
-  color: black;
-  padding: 20px 30px;
-  background-color: #fff;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 {
-  width: 0%;
-  height: 100%;
-  position: relative;
-  top: -122px;
-  background: #131313;
-  overflow: hidden;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 .layer-inner {
-  display: grid;
-  grid-template-columns: 90px 1fr;
-  padding: 28px 30px;
-  align-items: center;
-  height: 100%;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 .layer-inner .content__inner {
-  width: max-content;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 .layer-inner .content__inner .content__title {
-  font-family: "Space Grotesk", serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 1.15;
-  letter-spacing: 0.005em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 .layer-inner .content__inner .content__description {
-  font-family: "Jost", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 21px;
-  color: #FFFFFF;
-  opacity: 0.85;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 .layer-inner .content__image {
-  width: max-content;
-  color: white;
-  display: grid;
-  position: relative;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_14 .scene-1 .scene-1__content .content__group-1 .content__group-layer-2 .layer-inner .content__image .image-separator {
-  width: 2px;
-  height: 60px;
-  background: #282828;
-  position: absolute;
-  top: 0;
-  right: -15px;
-}
+.element {
+  width: 300px;
+  height: 300px;
+  background-color: #eaea; }
+
+.trigger {
+  width: 100px;
+  height: 30px;
+  background-color: black;
+  margin-bottom: 300px;
+  position: relative; }
