--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,18 +15,84 @@ section {
 	height: 100vh;
 	display: grid;
 	justify-items: center;
+	align-items: center;
+	background-color: #D7E3E7;
 }
 
-.element {
-	width: 300px;
-	height: 300px;
-	background-color: #eaea;
-}
-.trigger {
-	width: 100px;
-	height: 30px;
-	background-color: black;
-	margin-bottom: 300px;
-	position: relative;
-	//dsfs1
+.TERADEK_LOWER_THIRD_ANIMATION_17 {
+	& .scene-1 {
+		& .scene-1__content {
+			display: grid;
+			place-items: end;
+			& .content__group-1 {
+				width: 100%;
+				overflow: hidden;
+				display: grid;
+				justify-content: end;
+				align-content:end;
+
+				& .layer-group-1 {
+					display: grid;
+					grid-template-columns: 120px 1fr;
+					background: linear-gradient(267.15deg, #0F062C 2.7%, #361872 104%);
+					height: 100%;
+					padding: 30px 30px;
+					width: max-content;
+				}
+				& .content__image{
+					width: max-content;
+				}
+				& .content__group-inner {
+					position: relative;
+					width: max-content;
+					overflow: hidden;
+					& .content__top-separator {
+						width: 100%;
+						height: 10px;
+						position: absolute;
+						top: 0;
+						left: 0;
+						background-size: 10px 10px;
+						background-image: conic-gradient(#28487d00 90deg, #d7e3e700 90deg 180deg, #617ca200 180deg 270deg,#4d219c 270deg);
+						transform: translateX(-100%);
+					}
+					& .content__bottom-separator {
+						width: 100%;
+						height: 10px;
+						position: absolute;
+						bottom: 0;
+						left: 0;
+						background-size: 10px 10px;
+						background-image: conic-gradient(#28487d00 90deg, #d7e3e700 90deg 180deg, #617ca200 180deg 270deg,#4d219c 270deg);
+						transform: translateX(-100%);
+					}
+					& .content__title{
+						font-family: 'Space Grotesk', serif;
+						font-style: normal;
+						font-weight: 700;
+						font-size: 32px;
+						line-height: 60px;
+						letter-spacing: 0.005em;
+						text-transform: uppercase;
+						background: linear-gradient(177.78deg, #FFFFFF 29.66%, rgba(227, 227, 227, 0) 98.13%);
+						-webkit-background-clip: text;
+						-webkit-text-fill-color: transparent;
+						text-fill-color: transparent;
+						text-align: center;
+					}
+					& .content__description {
+						font-family: 'Jost', serif;
+						font-style: normal;
+						font-weight: 400;
+						font-size: 21px;
+						line-height: 40px;
+						color: #FFFFFF;
+						opacity: 0.85;
+						text-align: center;
+					}
+				}
+			}
+
+		}
+	}
 }
