--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,74 +88,16 @@ section {
   background-color: #D7E3E7;
 }
 
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content {
-  display: grid;
-  place-items: end;
+.element {
+  width: 300px;
+  height: 300px;
+  background-color: #eaea;
 }
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 {
-  width: 100%;
-  overflow: hidden;
-  display: grid;
-  justify-content: end;
-  align-content: end;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .layer-group-1 {
-  display: grid;
-  grid-template-columns: 120px 1fr;
-  background: linear-gradient(267.15deg, #0F062C 2.7%, #361872 104%);
-  height: 100%;
-  padding: 30px 30px;
-  width: max-content;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .content__image {
-  width: max-content;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .content__group-inner {
+
+.trigger {
+  width: 100px;
+  height: 30px;
+  background-color: black;
+  margin-bottom: 300px;
   position: relative;
-  width: max-content;
-  overflow: hidden;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .content__group-inner .content__top-separator {
-  width: 100%;
-  height: 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: 10px 10px;
-  background-image: conic-gradient(#28487d00 90deg, #d7e3e700 90deg 180deg, #617ca200 180deg 270deg, #4d219c 270deg);
-  transform: translateX(-100%);
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .content__group-inner .content__bottom-separator {
-  width: 100%;
-  height: 10px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-size: 10px 10px;
-  background-image: conic-gradient(#28487d00 90deg, #d7e3e700 90deg 180deg, #617ca200 180deg 270deg, #4d219c 270deg);
-  transform: translateX(-100%);
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .content__group-inner .content__title {
-  font-family: "Space Grotesk", serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 60px;
-  letter-spacing: 0.005em;
-  text-transform: uppercase;
-  background: linear-gradient(177.78deg, #FFFFFF 29.66%, rgba(227, 227, 227, 0) 98.13%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  text-align: center;
-}
-.TERADEK_LOWER_THIRD_ANIMATION_17 .scene-1 .scene-1__content .content__group-1 .content__group-inner .content__description {
-  font-family: "Jost", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 21px;
-  line-height: 40px;
-  color: #FFFFFF;
-  opacity: 0.85;
-  text-align: center;
 }
