--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,16 +88,74 @@ section {
   background-color: #D7E3E7;
 }
 
-.element {
-  width: 300px;
-  height: 300px;
-  background-color: #eaea;
-}
-
-.trigger {
-  width: 100px;
-  height: 30px;
-  background-color: black;
-  margin-bottom: 300px;
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 {
+  width: 100%;
+  height: 120px;
+  display: grid;
+  background: #131313;
+  grid-template-columns: 160px 1fr 140px;
   position: relative;
+  overflow: hidden;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__group-inner {
+  width: max-content;
+  display: grid;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__group-inner .content__title {
+  font-family: "Space Grotesk", serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.15;
+  letter-spacing: 0.005em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__group-inner .content__description {
+  font-family: "Jost", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 1.15;
+  color: #FFFFFF;
+  opacity: 0.85;
+  display: grid;
+  align-items: end;
+  justify-items: self-start;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__layer--right {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__layer--right .bg-decor {
+  position: absolute;
+  height: 100%;
+  right: 0;
+  z-index: 1;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__layer--right .circle-decor {
+  position: relative;
+  z-index: 2;
+  padding-left: 25px;
+  width: 44%;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__layer--bottom {
+  width: 100%;
+  height: 6px;
+  background: linear-gradient(90deg, #216BF0 0%, #F53801 99.81%);
+  position: absolute;
+  bottom: 0;
+  z-index: 6;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__left--decoration {
+  position: absolute;
+  z-index: 5;
+  left: 0;
+}
+.TERADEK_LOWER_THIRD_ANIMATION_32 .scene-1 .scene-1__content .content__group-1 .content__left--decoration .decor-2 {
+  position: absolute;
+  left: 60px;
 }
