--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,84 +20,16 @@ section {
 }
 
 
- .TERADEK_LOWER_THIRD_ANIMATION_32 {
-	 & .scene-1{
-		 & .scene-1__content{
-			 & .content__group-1{
-				 width: 100%;
-				 height: 120px;
-				 display: grid;
-				 background: #131313;
-				 grid-template-columns: 160px 1fr 140px;
-				 position: relative;
-				 overflow: hidden;
-				 & .content__group-inner{
-					 width: max-content;
-					 display: grid;
-					 & .content__title{
-						 font-family: 'Space Grotesk', serif;
-						 font-style: normal;
-						 font-weight: 700;
-						 font-size: 32px;
-						 line-height: 1.15;
-						 //line-height: 71px;
-						 letter-spacing: 0.005em;
-						 text-transform: uppercase;
-						 color: #FFFFFF;
-					 }
-					 & .content__description{
-						 font-family: 'Jost', serif;
-						 font-style: normal;
-						 font-weight: 400;
-						 font-size: 21px;
-						 line-height: 1.15;
-						 color: #FFFFFF;
-						 opacity: 0.85;
-						 display: grid;
-						 align-items: end;
-						 justify-items: self-start;
-					 }
-				 }
-				 & .content__layer--left {
-
-				 }
-				 & .content__layer--right {
-                     width: 100%;
-					 height: 100%;
-					 display: grid;
-					 place-items: center;
-					 position: relative;
-					 & .bg-decor {
-						 position: absolute;
-						 height: 100%;
-						 right: 0;
-						 z-index: 1;
-					 }
-					 & .circle-decor{
-						 position: relative;
-						 z-index: 2;
-						 padding-left: 25px;
-						 width: 44%;
-					 }
-				 }
-				 & .content__layer--bottom{
-					 width: 100%;
-					 height: 6px;
-					 background: linear-gradient(90deg, #216BF0 0%, #F53801 99.81%);
-					 position: absolute;
-					 bottom: 0;
-					 z-index: 6;
-				 }
-				 & .content__left--decoration{
-					 position: absolute;
-					 z-index: 5;
-					 left: 0;
-					 & .decor-2 {
-						 position: absolute;
-						 left: 60px;
-					 }
-				 }
-			 }
-		 }
-	 }
- }
+ .element {
+	width: 300px;
+	height: 300px;
+	background-color: #eaea;
+}
+.trigger {
+	width: 100px;
+	height: 30px;
+	background-color: black;
+	margin-bottom: 300px;
+	position: relative;
+	//dsfs1
+}
